# CRISPRGenie

./: .gitignore  README.md  crispr_genie.ipynb  environment.yml  pyproject.toml  train_genie.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
config/: config.yaml
data/: get_data.py
notebooks/: crispr_genie.ipynb  crispr_genie_updated.ipynb  play.ipynb
src/: main.py  train.py
src/CRISPRGenie/: cli.py  main.py  utils.py
src/CRISPRGenie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/CRISPRGenie/data/: dataloader.py  preprocess.py
src/CRISPRGenie/models/: gpt.py  tokenizer.py  utils.py
src/CRISPRGenie/results/logs/: 2024-08-06_log.txt
src/data/: dataset.py  loader.py
src/models/: tokenizer.py
src/utils/: loss.py  utils.py
tests/: Readme.md  test_main.py
